2008-12-01  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcodbc.c: Added '-encoding' and -timeout' options.
	Added direct transfer (rather than stringization) of parameters
	of integer and floating point types.
	* tests/tdbcodbc.test (tdbc::odbc-19.*): Added rudimentary
	configuration tests.
	
2008-11-30  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in: Changed PACKAGE_NAME to lowercase 'tdbcodbc'
			Changed PACKAGE_VERSION to 0.2a1
	* tclconfig/tcl.m4: 
			Look in a few additional places for dependent packages.
	* library/tdbcodbc.tcl: Lowercased the 'tdbc' package and advanced the
	                        version number on which tdbcodbc depends.
			        Added code to detect whether the connection
	                        supports Unicode.
	* generic/tdbcodbc.c: Added '-isolation' and '-readonly' configuration
		              options. Added code to use Unicode if possible
			      for columns of unknown type and wide-character
			      columns. Changed the script-level package name
			      to tdbc::odbc.
	* tests/tdbcodbc.test: Changed the script-level package name to
			       tdbc::odbc. Renamed all tests accordingly.
	* Makefile.in: Changed the script-level package name to tdbc::odbc
	               for building pkgIndex.tcl
	* test.mdb: Reverted a commit that corrupted this file.
	
2008-11-22  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in: Changed configurator so that 8.6 no longer requires a
	dummy tclooConfig.h.
	* configure: Autoconf 2.61
	
2008-06-15  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcodbc.c: 
	* tests/tdbcodbc.test: Removed the default check for Tk. Instead,
	added a '-parent window' option to the constructor of
	tdbc::odbc::connection that gives a parent window for the
	driver manager dialog.
	Added a 'configure' method to the connection object, and
	rudimentary tests. (No configuration options yet implemented)
	
2008-06-11  Kevin B. Kenny  <kennykb@acm.org>
	